EPAD8-923: Fix z-index of definition tooltip

--- a/services/drupal/web/themes/epa_theme/source/_patterns/05-components/definition/_definition.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/05-components/definition/_definition.scss
@@ -37,6 +37,7 @@
   max-width: rem(960px);
   padding: gesso-spacing(2);
   position: absolute;
+  z-index: 1;
 
   a {
     @extend %dark-bg-link;
